kubernetes/average-shade.service.yml
apiVersion: v1
kind: Service
metadata:
  name: average-shade-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8383
      targetPort: 80
      protocol: TCP
  selector:
    app: average-shade
