kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-service-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
    # Intercept bot traffic at the NGINX level
    # This prevents the requests from reaching KEDA and resetting the scale-down timer
    nginx.ingress.kubernetes.io/server-snippet: |
        location = /robots.txt {
            add_header Content-Type text/plain;
            return 200 "User-agent: *\nDisallow: /\n";
        }
        location = /favicon.ico {
            return 204;
        }
spec:
  ingressClassName: nginx
  rules:
    - host: my-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service-service
                port:
                  number: 80
  tls:
    - hosts:
        - my-service.example.com
      secretName: my-service-example-com-tls-cert
